Show proper error message when a malformed url is entered, e.g. www.kde,org. Avoid converting a error url into another error url.

BUG: 218501
FIXED-IN: 4.6.5

(cherry picked from commit 69de0ca6475e8523c2b7de5bdd2471b68024912a)